<resources>
    <string name="app_name">COVID-19 Real-Time Tracker</string>
    <string name="search">Search</string>
    <string name="country">Country</string>
    <string name="_0">0</string>
    <string name="recovered">Recovered</string>
    <string name="total_cases">Total Cases</string>
    <string name="deaths">Deaths</string>
    <string name="global_stats">global stats</string>
    <string name="cases">Cases</string>
    <string name="critical">Critical</string>
    <string name="active">Active</string>
    <string name="today_cases">Today Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="track_countries">Track countries</string>
    <string name="country_name">Country Name</string>
    <string name="covid">COVID</string>
    <string name="tracker">TRACKER</string>
    <string name="ooops">Ooops!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="map">Map</string>
    <string name="about_us">About Us</string>
    <string name="menu_text">COVID-19: Who\'s at higher risk of serious symptoms</string>
    <string name="new_message">New Message!</string>
    <string name="expand_to_show">Expand to show</string>
    <string name="get_data">Get data</string>
    <string name="success">Success!</string>

</resources>
